# cgrparser

./: .gitignore  README.rst  SECURITY.md  fork-features.md  pyproject.toml
codegen/: build_tables.py  c_ast.cfg  c_ast_gen.py  clean_cached_files.py
examples/: README.rst  c-to-c.py  c_json.py  cdecl.py  construct_ast_from_scratch.py  dump_ast.py  explore_ast.py  func_calls.py  func_defs.py  func_defs_add_param.py  rewrite_ast.py  serialize_ast.py  using_cpp_libc.py  using_gcc_E_libc.py
pycparser/: _ast_gen.py
src/cgrparser/: __init__.py  api.py  ast_base.py  ast_transforms.py  c_generator.py  c_lexer.py  c_parser.py  plyparser.py
src/cgrparser/ply/: cpp.py  lex.py
src/pycparser/: _ast_gen.py  ast_base.py  ast_transforms.py  c_generator.py  c_lexer.py  c_parser.py  model.py  plyparser.py
src/pycparser/ply/: lex.py
tests/: test_c_ast.py  test_c_generator.py  test_c_lexer.py  test_c_parser.py  test_examples.py  test_general.py  test_util.py
utils/fake_libc_include/: _fake_typedefs.h  dirent.h
utils/fake_libc_include/X11/: _X11_fake_typedefs.h
