[tool.poetry]
name = 'pycparser'
version = '2.25.2'
description = 'C to AST parser, written in Python'
authors = ['Eli Bendersky <eliben@gmail.com>']
license = 'BSD-3-Clause'
readme = "README.rst"
maintainers = ['Eli Bendersky <eliben@gmail.com>']
classifiers  =  [
    'Development Status :: 5 - Production/Stable',
    'License :: OSI Approved :: BSD License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
]

[tool.poetry.urls]
"Homepage" = 'https://github.com/eliben/pycparser'

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
ptpython = "^3.0.29"
mypy = "^1.11.2"
poethepoet = "^0.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.poetry_hooks]
pre_build = "build-tables"
pre_install = "build-tables"

[tool.poe.tasks.build-tables]
cmd  = "python3 ./codegen/build_tables.py"
help = "Build 'lextab.py', 'yacctab.py' and 'c_ast.py'"

[tool.poe.tasks.clean]
shell = """
    rm -rf ./dist
    python3 -B ./codegen/clean_cached_files.py
"""
help = "Remove all '__pycache__' dirs and generated tables"

[tool.poe.tasks.test]
shell = '''
    printf \\033c
    python -m unittest discover --catch
'''
help = "Run unit tests"

[tool.poe.tasks.lint]
shell = '''
    printf \\033c
    mypy src/
'''
help = "Run mypy on codebase"

[tool.mypy]
warn_unused_ignores = true
warn_unreachable = true
exclude = [
    'yacctab\.py$',
    'lextab\.py$',
    '^src/pycparser/ply',
]
enable_incomplete_feature = [
    "NewGenericSyntax",
]
